--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="button_ok">OK</string>
     <string name="network_not_available_str">Network is not available please connect to the network.</string>
     <string name="title">Title</string>
+    <string name="host_error">There is some problem in server please try again later.</string>
+
 </resources>
